[package]
name = "stackspy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "stackspy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"
bip39 = "2.0.0"
ripemd = "0.1.3"
ring = "0.16.20"
thiserror = "1.0.29"
stacks-rs = {"git"= "https://github.com/rohitverma007/stacks.rs.git"}

[dependencies.secp256k1]
version = "0.27.0"
features = ["recovery"]

